--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
             var scaleFactor = 1;
             var x = 0;
             var y = 0;
-            for (var i = interns.length - 1; i >= 0; i--) {
+            var image = firstImage;
+            while (image) {
                 var parentScaleFactor = scaleFactor;
-                scaleFactor *= interns[i].scaleFromParent;
-                x += interns[i].xFromParent * parentScaleFactor;
-                y += interns[i].yFromParent * parentScaleFactor;
-                ctx.drawImage(interns[i].image, x, y, interns[i].width*scaleFactor, interns[i].height*scaleFactor);
+                scaleFactor *= image.scaleFromParent;
+                x += image.xFromParent * parentScaleFactor;
+                y += image.yFromParent * parentScaleFactor;
+                ctx.drawImage(image.image, x, y, image.width*scaleFactor, image.height*scaleFactor);
+                image = image.child;
             }
 
         }
@@ -85,39 +87,6 @@
         canvas.addEventListener('mousewheel',handleScroll,false);
     };
 
-    var interns4 = {
-        image: new Image,
-        width: 4032,
-        height: 3024,
-        scaleFromParent: 0.3,
-        angleFromParent: 0,
-        xFromParent: 0,
-        yFromParent: 0
-    };
-    interns4.image.src = 'images/interns4.jpg';
-
-    var interns3 = {
-        image: new Image,
-        width: 3264,
-        height: 2448,
-        scaleFromParent: 0.38,
-        angleFromParent: 0,
-        xFromParent: 2000,
-        yFromParent: 1750
-    };
-    interns3.image.src = 'images/interns3.jpg';
-
-    var interns2 = {
-        image: new Image,
-        width: 3264,
-        height: 2448,
-        scaleFromParent: 0.29,
-        angleFromParent: 0,
-        xFromParent: 1450,
-        yFromParent: 1400
-    };
-    interns2.image.src = 'images/interns2.jpg';
-
     var interns1 = {
         image: new Image,
         width: 1542,
@@ -128,7 +97,44 @@
         yFromParent: 1400
     };
     interns1.image.src = 'images/interns1.jpg';
-    var interns = [interns1, interns2, interns3, interns4];
+
+    var interns2 = {
+        image: new Image,
+        width: 3264,
+        height: 2448,
+        scaleFromParent: 0.29,
+        angleFromParent: 0,
+        xFromParent: 1450,
+        yFromParent: 1400,
+        child: interns1
+    };
+    interns2.image.src = 'images/interns2.jpg';
+
+    var interns3 = {
+        image: new Image,
+        width: 3264,
+        height: 2448,
+        scaleFromParent: 0.38,
+        angleFromParent: 0,
+        xFromParent: 2000,
+        yFromParent: 1750,
+        child: interns2
+    };
+    interns3.image.src = 'images/interns3.jpg';
+
+    var interns4 = {
+        image: new Image,
+        width: 4032,
+        height: 3024,
+        scaleFromParent: 0.3,
+        angleFromParent: 0,
+        xFromParent: 0,
+        yFromParent: 0,
+        child: interns3
+    };
+    interns4.image.src = 'images/interns4.jpg';
+
+    var firstImage = interns4;
 
     // Adds ctx.getTransform() - returns an SVGMatrix
     // Adds ctx.transformedPoint(x,y) - returns an SVGPoint
